--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="header-right">
                     <ul class="clearfix">
-                        <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
+                        <!-- <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
                                 <i class="mdi mdi-email-outline"></i>
                                 <span class="badge badge-pill gradient-1">3</span>
                             </a>
@@ -198,7 +198,7 @@
                                     
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                         
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
@@ -211,16 +211,16 @@
                                         <li>
                                             <a href="app-profile.html"><i class="icon-user"></i> <span>Admin</span></a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="javascript:void()">
                                                 <i class="icon-envelope-open"></i> <span>Inbox</span> <div class="badge gradient-3 badge-pill gradient-1">3</div>
                                             </a>
-                                        </li>
+                                        </li> -->
                                         
-                                        <hr class="my-2">
+<!--                                         
                                         <li>
                                             <a href="page-lock.html"><i class="icon-lock"></i> <span>Lock Screen</span></a>
-                                        </li>
+                                        </li> -->
                                         <li><a href="{{ url_for('admin_logout') }}"><i class="icon-key"></i> <span>Logout</span></a></li>
                                     </ul>
                                 </div>
@@ -269,7 +269,7 @@
                             <li><a href="layout-fixed-sidebar.html">Fixed Sidebar</a></li>
                         </ul>
                     </li> -->
-                    <li class="nav-label">Apps</li>
+                    <!-- <li class="nav-label">Apps</li> -->
                     <!-- <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                             <i class="icon-envelope menu-icon"></i> <span class="nav-text">Email</span>
@@ -302,7 +302,7 @@
                             <li><a href="./chart-peity.html">Peity</a></li>
                         </ul>
                     </li> -->
-                    <li class="nav-label">UI Components</li>
+                    <!-- <li class="nav-label">UI Components</li> -->
                     <!-- <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                             <i class="icon-grid menu-icon"></i><span class="nav-text">UI Components</span>
@@ -342,7 +342,7 @@
                             <i class="icon-badge menu-icon"></i><span class="nav-text">Widget</span>
                         </a>
                     </li> -->
-                    <li class="nav-label">Forms</li>
+                    <!-- <li class="nav-label">Forms</li> -->
                     <!-- <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                             <i class="icon-note menu-icon"></i><span class="nav-text">Forms</span>
@@ -355,7 +355,7 @@
                             <li><a href="./form-picker.html">Picker</a></li>
                         </ul>
                     </li> -->
-                    <li class="nav-label">Table</li>
+                    <!-- <li class="nav-label">Table</li> -->
                     <!-- <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                             <i class="icon-menu menu-icon"></i><span class="nav-text">Table</span>
@@ -365,7 +365,7 @@
                             <li><a href="./table-datatable.html" aria-expanded="false">Data Table</a></li>
                         </ul>
                     </li> -->
-                    <li class="nav-label">Pages</li>
+                    <!-- <li class="nav-label">Pages</li> -->
                     <!-- <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                             <i class="icon-notebook menu-icon"></i><span class="nav-text">Pages</span>
