chnages to routes for users

--- a/app/templates/root/index.html
+++ b/app/templates/root/index.html
@@ -233,7 +233,7 @@ BwaveICT: Learn coding and tech skills from the comfort of your home. | We creat
                 <h3>JOIN OUR TECH PROGRAMS</h3>
                 <p>Unlock your potential in programming, software engineering, and technology. Join our educational programs and take the first step towards a tech-savvy future.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="{{url_for('courses_page')}}">Join Us Now!</a></div>
+                  <div class=""><a href="{{url_for('courses_page')}}">Join Us Now!</a></div>
               </div>
               </div>
             </div>
@@ -242,7 +242,7 @@ BwaveICT: Learn coding and tech skills from the comfort of your home. | We creat
                 <h3>BRING YOUR PROJECT TO LIFE</h3>
                 <p>We specialize in building, managing, and revamping projects, websites, apps, and software. Let us turn your ideas into reality. Let's take your business online. Let's reform your social look. Contact us today.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a href="{{url_for('services_page')}}">Get Started</a></div>
+                  <div class=""><a href="{{url_for('services_page')}}">Get Started</a></div>
               </div>
               </div>
             </div>
