--- a/app/templates/root/blogs.html
+++ b/app/templates/root/blogs.html
@@ -2,11 +2,11 @@
 
 
 {% block keywords %} 
-Coding, Software Engineering, Web Development, Python, C, C programming, Javascript, Online web development, Learn tech, Bwave Bwave ICT, Web development training in nigeria, Software development company, Best online training, Best web development, Bwave git, Bwave alx 
+Coding, Software Engineering, Web Development, Python, C, C programming, Javascript, Online web development, Learn tech, Bwave Bwave ICT, Web development training in nigeria, Software development company, Best online training, Best web development, Bwave git, Bwave alx. 
 {% endblock %}
 
 {% block description %}
-Get latest information about tech, life hacks, bwaveict programs, relevant news on various subjects, and stay Connected to the rest of the world with our blog and blog posts.
+Get latest information about tech, Get into coding, Build quality websites, Discover life hacks, bwaveict programs, relevant news on various subjects, and stay Connected to the rest of the world with our blog and blog posts.
 {% endblock %}
 
 {% block author %}Bwave ICT{% endblock %}
