--- a/app/templates/root/course.html
+++ b/app/templates/root/course.html
@@ -6,6 +6,7 @@ Coding, Software Engineering, Web Development, Python, C, C programming, Javascr
 
 {% block description %}
 {{ course.description }}
+We are best place to learn programming in port harcourt. | We are the best Website Development training group in port harcourt and Nigeria. We are the best Ict School in port harcourt, Nigeria 2024 | Best ICT school near me. We are the best coding training group in port harcourt
 {% endblock %}
 
 {% block author %}Bwave ICT{% endblock %}
