--- a/app/templates/root/index.html
+++ b/app/templates/root/index.html
@@ -6,7 +6,7 @@ Coding, Software Engineering, Web Development, Python, C, C programming, Javascr
 {% endblock %}
 
 {% block description %}
-BwaveICT: Learn coding and tech skills from the comfort of your home. | We create Websites, Mobile Applications, and software solutions. | Learning tech made easy. | Apply to learn From us today | Contact us to bring your dreams to reality. | We'll give you more than we promised!.
+BwaveICT: Learn coding and tech skills from the comfort of your home. | We create Websites, Mobile Applications, and software solutions. | Learning tech made easy. | We are best place to learn programming in port harcourt | We are best place to learn programming in port harcourt. | We are the best Website Development training group in port harcourt and Nigeria |  We'll give you more than we promised!.| We are the best Ict School in port harcourt, Nigeria 2024 | Best ICT school near me
 {% endblock %}
 
 {% block author %}Bwave ICT{% endblock %}
