--- a/app/templates/root/services.html
+++ b/app/templates/root/services.html
@@ -9,7 +9,7 @@ Coding, Software Engineering, Web Development, Python, C, C programming, Javascr
 BwaveICT: Learn coding and tech skills from the comfort of your home.
 What is Bwave? Who is Bwave? What is Bwave ict all about?
  Here are our services: We create Websites like ecommerce website, freelance website, web3, crypto marketplace, portfolio website, business website, Mobile Applications for andriod, and ios, and software solutions. We also teach tech courses like software engineering, web development, video editing, python, javascript. Learning tech made easy with us. Apply to learn From us today. Contact us to bring your dreams to reality. We'll give you more than we promised!.
- Number one web developmet company in Nigeria. Number one web developmet organisation in Port harcourt. Number one web developmet company in Rivers state.
+ Number one web developmet company in Nigeria. Number one web developmet organisation in Port harcourt. Number one web developmet company in Rivers state. We are the best coding training group in port harcourt. We are best place to learn programming in port harcourt. |
 {% endblock %}
 
 {% block author %}Bwave ICT{% endblock %}
