--- a/app/templates/root/web-dev.html
+++ b/app/templates/root/web-dev.html
@@ -7,8 +7,8 @@ Expert Web Development and Coding Services in Nigeria and West Africa, Learn Cod
 {% endblock %}
 
 {% block description %}
-Bwave ICT specializes in crafting top-tier websites, mobile applications, and innovative software solutions.
-Empower yourself with coding and technology skills from the comfort of your home. We specialize in crafting Websites, Mobile Applications, and cutting-edge software solutions. Discover the simplicity of mastering technology. Apply now to embark on your learning journey with us. Contact us to turn your dreams into reality. At Bwave ICT, we always deliver more than we promise. Discover a world of web development, software engineering, and tech skills from the comfort of your home.  Our online tech training is designed to make learning easy. Apply to learn with us today and witness your dreams come to life. Contact Bwave ICT to transform your ideas into reality. We're committed to delivering more than what we promise!
+Bwave ICT specializes in crafting top-tier websites, mobile applications, and innovative software solutions. We are the best website development and design group in port harcourt. We are the best Website Development training group in port harcourt and Nigeria |  We'll give you more than we promised!.
+Empower yourself with coding and technology skills from the comfort of your home. We specialize in crafting Websites, Mobile Applications, and cutting-edge software solutions. Discover the simplicity of mastering technology. Apply now to embark on your learning journey with us. Contact us to turn your dreams into reality. At Bwave ICT, we always deliver more than we promise. Discover a world of web development, software engineering, and tech skills from the comfort of your home.  Our online tech training is designed to make learning easy. Apply to learn with us today and witness your dreams come to life. Contact Bwave ICT to transform your ideas into reality. We're committed to delivering more than what we promise! 
 {% endblock %}
 
 {% block author %}Bwave ICT{% endblock %}
