added new video link to website

--- a/app/templates/root/web-dev.html
+++ b/app/templates/root/web-dev.html
@@ -47,7 +47,7 @@ Empower yourself with coding and technology skills from the comfort of your home
           <h1>Every Business Owner Should Have A Website</h1>
           <h2>We are your surest option for crafting exceptional websites</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="btn-get-started scrollto"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://youtu.be/rtU5P0DOMM4?si=aU6QAD-K1lGRusgX" class="btn-get-started scrollto"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
