--- a/app/templates/root/app-dev.html
+++ b/app/templates/root/app-dev.html
@@ -52,7 +52,7 @@ Empower yourself with coding and technology skills from the comfort of your home
           <h1>Building Exceptional Apps For You</h1>
           <h2>Your Premier Choice for Desktop, Mobile, and iOS App Development</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://youtu.be/rtU5P0DOMM4?si=aU6QAD-K1lGRusgX" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
