--- a/app/templates/root/base.html
+++ b/app/templates/root/base.html
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p><em> Everything Tech </em> made easy</p>
+            <p> The home of <em> Tech Pros </em></p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
