--- a/app/templates/root/index.html
+++ b/app/templates/root/index.html
@@ -14,7 +14,7 @@ BwaveICT: Learn coding and tech skills from the comfort of your home. | We creat
 
 
 {% block title %}
-  Bwave ICT - Tech made easy
+  Bwave ICT - The home of tech Pros
 {% endblock %} 
 
 
@@ -33,8 +33,8 @@ BwaveICT: Learn coding and tech skills from the comfort of your home. | We creat
           <div class="row">
             <div class="col-lg-12">
               <div class="caption">
-            <h6>We've got a great news to share</h6>
-            <h2>Evreything Tech just got Easier</h2>
+            <h6>Welcome to the home of Tech Pros</h6>
+            <h2>Bwave ICT - Tech made easy</h2>
             <div class="main-button-red">
                 <div ><a href="{{url_for('courses_page')}}">Explore Our Services</a>   </div> 
             </div>
@@ -548,7 +548,7 @@ BwaveICT: Learn coding and tech skills from the comfort of your home. | We creat
               </li>
               <li>
                 <h6>Website URL</h6>
-                <span>www.bwaveict.com</span>
+                <span>www.bwaveict.pro</span>
               </li>
             </ul>
           </div>
