major_fixes_to_handle_user_application

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -66,7 +66,7 @@ html[xmlns] .clearfix {
 ul, li {
   padding: 0;
   margin: 0;
-  list-style: none;
+  /* list-style: none; */
 }
 
 header, nav, section, article, aside, footer, hgroup {
