--- a/app/templates/user/application_approved_mail.html
+++ b/app/templates/user/application_approved_mail.html
@@ -77,7 +77,7 @@
               <!-- Start button (You can change the background colour by the hex code below) -->
               <a href="#" target="_blank" style="background-color: #000000; font-size: 15px; line-height: 22px; font-family: 'Helvetica', Arial, sans-serif; font-weight: normal; text-decoration: none; padding: 12px 15px; color: #ffffff; border-radius: 5px; display: inline-block; mso-padding-alt: 0;">
 
-                  <span style="mso-text-raise: 15pt; color: #ffffff;">Download The Curriculum</span>
+                  <!-- <span style="mso-text-raise: 15pt; color: #ffffff;">Download The Curriculum</span> -->
                
               </a>
               <!-- End button here -->
@@ -151,8 +151,8 @@
               </p>
 
               <p style="margin-bottom: 0; font-size: 13px; line-height: 24px; font-family: 'Helvetica', Arial, sans-serif; font-weight: 400; text-decoration: none; color: #ffffff;">
-                <a target="_blank" style="text-decoration: underline; color: #ffffff;" href="https://bwaveict.com">
-                  www.bwaveict.com
+                <a target="_blank" style="text-decoration: underline; color: #ffffff;" href="https://bwaveict.pro">
+                  www.bwaveict.pro
                 </a>
               </p>
 
