--- a/app/templates/user/application_received_mail.html
+++ b/app/templates/user/application_received_mail.html
@@ -21,8 +21,8 @@
                         
                         <p style="font-size: 15px; line-height: 24px; font-family: 'Helvetica', Arial, sans-serif; font-weight: 400; text-decoration: none; color: #919293;">You can explore our services and other courses <a target="_blank" style="text-decoration: underline; color: #000000;" href="{{url_for('services_page', _external=True) }}"><u>BY CLICKING HERE</u></a></p>
                         
-                        <a href="{{url_for('login', _external=True) }}" target="_blank" style="background-color: #000000; font-size: 15px; line-height: 22px; font-family: 'Helvetica', Arial, sans-serif; font-weight: normal; text-decoration: none; padding: 12px 15px; color: #ffffff; border-radius: 5px; display: inline-block; mso-padding-alt: 0;">
-                            <span style="mso-text-raise: 15pt; color: #ffffff;">Go To Dashboard</span>
+                        <a href="https://api.whatsapp.com/send?phone=+234+81+481+85691&text=Hello+b-wave%2C+I+just+applied+for+a+course." target="_blank" style="background-color: #000000; font-size: 15px; line-height: 22px; font-family: 'Helvetica', Arial, sans-serif; font-weight: normal; text-decoration: none; padding: 12px 15px; color: #ffffff; border-radius: 5px; display: inline-block; mso-padding-alt: 0;">
+                            <span style="mso-text-raise: 15pt; color: #ffffff;">Contact Us Directly</span>
                         </a>
                         <!-- End button here -->
                     </td>
@@ -41,8 +41,8 @@
                         <p> Aba Road, Port Harcourt,</p>
                         <p>Rivers State, Nigeria</p>
                         <p style="margin-bottom: 0; font-size: 13px; line-height: 24px; font-family: 'Helvetica', Arial, sans-serif; font-weight: 400; text-decoration: none; color: #ffffff;">
-                            <a target="_blank" style="text-decoration: underline; color: #ffffff;" href="https://bwaveict.com">
-                                www.bwaveict.com
+                            <a target="_blank" style="text-decoration: underline; color: #ffffff;" href="https://www.bwaveict.pro">
+                                www.bwaveict.pro
                             </a>
                         </p>
                     </td>
