updated_the_currency_to_fix_a_crash

--- a/app/templates/root/course.html
+++ b/app/templates/root/course.html
@@ -49,7 +49,7 @@ We are best place to learn programming in port harcourt. | We are the best Websi
               
               <div class="down-content">
                 <br> <br>
-                <a href="meeting-details.html"><h4>{{ course.title }}</h4></a>
+                <a href=""><h4>{{ course.title }}</h4></a>
                
                 <p class="description">
                   {{ course.content|safe }} 
