adding_relevant_links_to_welcome_email

--- a/app/templates/user/course_application.html
+++ b/app/templates/user/course_application.html
@@ -109,7 +109,7 @@
                             <input type="file" name="pic" accept="image/*" required> 
                             
                             <!-- First Text -->
-                            <a href="https://flutterwave.com/pay/kg3bjc8t5fio" target="_blank" class="payment-text"> <span> Click here </span>  to pay using your Debit/Credit Card</a>
+                            <a href="https://selar.co/pro_software_development_course" target="_blank" class="payment-text"> <span> Click here </span>  to pay using your Debit/Credit Card</a>
                             
                             <h2 class="fs-title"></h2>
 
