--- a/app/templates/root/courses.html
+++ b/app/templates/root/courses.html
@@ -33,7 +33,7 @@ Our Courses are Designed just for you! We make learning tech easy. Apply now and
       <div class="row">
         <div class="col-lg-12">
           <h2>Our Courses</h2>
-          <h6>Desiged just for you</h6>
+          <h6>Designed just for you</h6>
         </div>
       </div>
     </div>
