--- a/app/templates/user/application_approved_mail.html
+++ b/app/templates/user/application_approved_mail.html
@@ -75,7 +75,7 @@
               <p style="font-size: 15px; line-height: 24px; font-family: 'Helvetica', Arial, sans-serif; font-weight: 400; text-decoration: none; color: #919293;">We invite you to join our community of learners <a target="_blank" style="text-decoration: underline; color: #000000;" href="https://chat.whatsapp.com/D9GhehES9hw8SKdOlye0nW" ><u>Here</u></a></p>
 
               <!-- Start button (You can change the background colour by the hex code below) -->
-              <a href="https://join.slack.com/t/bwave-ict-pro-dev/shared_invite/zt-26qrn97tz-1q2_bb1pxyACS962OIQ7Sw" target="_blank" style="background-color: #000000; font-size: 15px; line-height: 22px; font-family: 'Helvetica', Arial, sans-serif; font-weight: normal; text-decoration: none; padding: 12px 15px; color: #ffffff; border-radius: 5px; display: inline-block; mso-padding-alt: 0;">
+              <a href="https://chat.whatsapp.com/D9GhehES9hw8SKdOlye0nW" target="_blank" style="background-color: #000000; font-size: 15px; line-height: 22px; font-family: 'Helvetica', Arial, sans-serif; font-weight: normal; text-decoration: none; padding: 12px 15px; color: #ffffff; border-radius: 5px; display: inline-block; mso-padding-alt: 0;">
 
                    <span style="mso-text-raise: 15pt; color: #ffffff;">Click Here To Join your dedicated learning space</span> 
                
